# AutonomusNavigation

./: .gitignore  IN_PERSON_CHECKLIST.txt  LOCAL_SIMULATION_SETUP.txt  PROJECT_WORKFLOW.txt  README.md  RUN_ROBOT_STEPS.txt  cleanup_ros_local.sh  log_execution.txt  run_ros_logged.sh  save_current_map.sh  send_relative_goal.sh  source_local_env.sh  start_local_validation.sh  start_local_validation_gui.sh  teleop_local_nav.sh
rob_project/: package.xml  setup.cfg  setup.py
rob_project/config/: mission_params.yaml  nav2_params.yaml  slam_params.yaml  waypoints.yaml
rob_project/launch/: local_nav2_validation.launch.py  minimal_navigation.launch.py  mission_launch.py  relative_goal_test.launch.py  tb3_sim_headless.launch.py
rob_project/rob_project/: csv_logger.py  mission_planner.py  nav2_lifecycle_starter.py  obstacle_detector.py  precision_parking.py  relative_goal_nav.py  sim_warmup_motion.py  station_detector.py  utils.py  waypoint_runner.py
rob_project/worlds/: project_map.world
statement/: map.dxf
